test: fix ManagersExecutionTest and StuckRequestsTest