@@ -354,6 +354,7 @@
                             --add-opens java.base/java.util=ALL-UNNAMED
                             --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                             --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED
+                            --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
                         </argLine>
                     </configuration>
                 </plugin>
